--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,12 +17,12 @@ stage('build'){
     
 }
 
-stage('Deploy'){
-    steps{
-       deploy adapters: [tomcat9(credentialsId: 'd1d9c776-88f0-490d-8914-a6af342286e0', path: '', url: 'http://192.168.1.9:8888/')], contextPath: 'in28Minutes-first-webapp-0.0.1-SNAPSHOT.war', war: '**/*.war'
-    }
+//stage('Deploy'){
+  //  steps{
+    //   deploy adapters: [tomcat9(credentialsId: 'd1d9c776-88f0-490d-8914-a6af342286e0', path: '', url: 'http://192.168.1.9:8888/')], contextPath: 'in28Minutes-first-webapp-0.0.1-SNAPSHOT.war', war: '**/*.war'
+  //  }
     
-}
+// }
 
 }
 }
