--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,6 +42,11 @@ pipeline {
                 '''
             }
         }
+        
+        stage('Input') {
+            steps {
+                input('Do you want to proceed to dev?')
+            }            
 
         stage('Deploy to Kubernetes') {
             steps {
